--- a/views/index.jade
+++ b/views/index.jade
@@ -35,6 +35,6 @@ block content
           p This project takes data from Ebay.com and converts it into a CSV file.
           h3.mt-3.mb-3 Connect Us 
           p 
-           a(href="https://github.com/yurikaza/Ebay.com-Data-Scraper") Github Repo 
+           a(href="https://github.com/yurikaza/Ebay.com-Data-Scraper" target="_blank") Github Repo 
           p
-           a(href="https://yusufpicakci.com/")  My Portfolio Website
+           a(href="https://yusufpicakci.com/" target="_blank")  My Portfolio Website
