--- a/views/product.jade
+++ b/views/product.jade
@@ -33,7 +33,7 @@ block content
    h1.mt-5 
      a.mt-5.mb-5(href="/user/downloadCsv") Download Csv
    p.mt-3 Note: If you want to use a CSV file on excel you have to convert your CSV file to an xlsx file 
-      a(href="https://convertio.co/csv-xlsx/") here.
+      a(href="https://convertio.co/csv-xlsx/" target="_blank") here.
    each item in devtoLists
       a(href=item.link, target="_blank" style="color: black; text-decoration: none")  
         .card.mb-3(style='max-width: 800px;')
