--- a/views/index.jade
+++ b/views/index.jade
@@ -32,7 +32,7 @@ block content
         
         .container 
           h3.mt-3.mb-3 About Project 
-          p This project takes data from Ebay.com and converts it into a CSV file.
+          p This project provides you to searching something on eBay and return it to a CSV file.
           h3.mt-3.mb-3 Connect Us 
           p 
            a(href="https://github.com/yurikaza/Ebay.com-Data-Scraper" target="_blank") Github Repo 
