--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,5 @@ html
    nav.navbar.navbar-light.bg-light
       .container-fluid
         .row
-         a.navbar-brand(href='/') Ebay Data Scraper
+         a.navbar-brand(href='/') eBay Data Scraper
     block content
